# text-trie

./: README.md  text-trie.cabal
Data/: TextTrie.hs
